{{$NEXT}}

0.13     2011-06-20

- A multipart email build with Courriel::Builder would have a broken
  Content-Type header, missing the required boundary attribute. Reported by
  ico. RT #68694.

- If you explicitly passed unencoded content when creating a part (which
  happens when using Courriel::Builder), that content would be modified so it
  had CRLF line endings. Now, such content is left untouched. Reported by
  ico. RT #68695.

- When passing encoded content to the Courriel::Part::Single constructor, the
  constructor used to modify the content so it had CRLF line endings. Now it
  is left alone.

- Note that if you're passing raw content to the Single constructor _and_
  setting the transfer encoding to 7bit, 8bit, or binary, then you'll end up
  with a noncomformant email. However, by default all raw content is base64
  encoded. It is strongly recommended that you pass raw content and let
  Courriel take care of the transfer encoding.


0.12     2011-06-07

[BUG FIXES]

- The value returned by Courriel::Part::Single->content() was not decoded to
  Perl's native utf-8 character set. Similarly, when encoding content for
  transfer, it was not first transformed to raw bytes.


0.11     2011-06-07

[BUG FIXES]

- Courriel::Builder now adds a "MIME-Version: 1.0" header to all emails it
  creates unless you explicitly set this header, which you probably shouldn't,
  since the only valid value is "1.0". This is a required header for MIME
  emails per RFC2045.


0.10     2011-06-07

[BUG FIXES]

- When parsing an email, the encoding attribute for parts was not set
  correctly, and ended up defaulting to 8bit for all parts. Now the encoding
  is set based on the part's Content-Transfer-Encoding header.


0.09     2011-06-06

[NEW FEATURES]

- This distro now ships a plugin for Email::Abstract, meaning you can use
  Courriel with Email::Sender.


0.08     2011-06-06

[API CHANGES]

- The content() and encoded_content() methods for Courriel::Part::Single now