@@ -34,7 +34,7 @@ has content_type => (
     lazy      => 1,
     builder   => '_build_content_type',
     predicate => '_has_content_type',
-    handles   => [qw( mime_type charset )],
+    handles   => [qw( mime_type charset has_charset )],
 );
 
 sub as_string {
